# hpserver

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/: copilot-instructions.md
.github/agents/: campus-interviewer.agent.md  modern-cpp-refactor.agent.md
.github/instructions/: modern-cpp-core.instructions.md
.github/prompts/: modern-cpp-maintainable-implementation.prompt.md
.github/skills/summarize-project-run-flow/: SKILL.md
.github/workflows/: cmake-multi-platform.yml
doc/: agent.md  http_cache.md  http_conn.md  http_conn_refactor_plan.md  loop.md  proxy_agent_runbook.md
proto/: README.md  http_cache.proto
src/: hpserver.cpp  hpserver.h  main.cpp
src/logger/: logger.cpp  logger.h
src/net/core/: ip_filter.cpp  ip_filter.h  poller.cpp  poller.h  socket_ops.cpp  socket_ops.h
src/net/http/: http_cache.cpp  http_cache.h  http_cache.pb.cc  http_cache.pb.h  http_conn.cpp  http_conn.h  http_connection_io.cpp  http_connection_io.h  http_message_builder.cpp  http_message_builder.h  http_request_parser.cpp  http_request_parser.h  http_response_parser.cpp  http_response_parser.h  http_test_response.cpp  http_test_response.h  persistent_cache.cpp  persistent_cache.h
src/net/proxy/: http_proxy.cpp  http_proxy.h  proxy_event_dispatcher.cpp  proxy_event_dispatcher.h  proxy_session_manager.cpp  proxy_session_manager.h  relay_engine.cpp  relay_engine.h  upstream_connector.cpp  upstream_connector.h
src/util/: bitwise_trie.h  bloom_filter.h  memory_cache.h  ring_buffer.h  thread_pool.h  threadsafe_queue.h  timer.h
tests/: CMakeLists.txt  bitwise_trie_test.cpp  bloom_filter_test.cpp  http_cache_test.cpp  http_conn_test.cpp  http_response_parser_test.cpp  ip_filter_test.cpp  memory_cache_test.cpp  thread_pool_test.cpp  threadsafe_queue_test.cpp
